# AmberFramework

./: .clang_complete  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/examples/001/: CMakeLists.txt  main.cpp
src/examples/002/: CMakeLists.txt  main.cpp
src/examples/003/: CMakeLists.txt  main.cpp
src/examples/004/: CMakeLists.txt  main.cpp
src/examples/asteroid_tunnels/: CMakeLists.txt  main.cpp
src/framework/: AmberFramework.h  Core.h  EntryPoint.cpp  Font8x8.h  Framework.cpp  Framework.h  Layer.h  LayerStack.cpp  LayerStack.h  LayerWindow.cpp  LayerWindow.h  Logger.cpp  Logger.h  Profiling.h  Window.cpp  Window.h
